# ReCoN-Cartpole

./: README.md  pyproject.toml
configs/: ablations.yaml  curriculum_1_to_6.yaml  curriculum_3_to_5.yaml  curriculum_stress.yaml  n4_gain_probe.yaml  viz_default.yaml
docs/: ARCHITECTURE.md  CURRENT_STATE.md  CURRICULUM.md  METRICS.md  N4_COUNTERFACTUAL_RESIDUAL_PRESERVATION_20260613.md  N4_FOCUSED_PPO_SWEEP_UPDATE_20260613.md  N4_GUARDED_CURRICULUM_UPDATE_20260613.md  N4_GUARDED_PPO_UPDATE_20260613.md  N4_MINGRU_ACTION_GATE_GRID_20260613.md  N4_MINGRU_ACTION_GATE_PROBE_20260613.md  N4_MINGRU_MIXED_START_CURRICULUM_20260613.md  N4_MINGRU_PPO_CONSERVATIVE_CONTINUE_20260613.md  N4_MINGRU_PPO_MIXED_FRESH_STARTS_20260613.md  N4_MINGRU_PPO_SCOUT_SELECTION_20260613.md  N4_MINGRU_ROUTING_DIAGNOSTIC_20260613.md  N4_MIXED_MINGRU_PPO_UPDATE_20260613.md  N4_PASSTHROUGH_PPO_UPDATE_20260613.md  N4_PPO_SYSTEMATIC_SLICE2_20260613.md  NLINK_3_5_TRAINING_PLAN.md  RECON_LITE_PROVENANCE.md  RECURRENT_TERMINAL_STRATEGY.md  RESULTS_TEMPLATE.md  TRAINING_STRATEGY_3_5.md  VISUALIZATION.md
reports/: cartpole_v1.html  cartpole_v1.json  n3_tick_demo.html  n3_tick_demo.json  n4_action_and_late_reward_scout_20260611.md  n4_autonomous_progress_20260611.md  n4_autonomous_training_update_20260611.md  n4_conservative_continuation_update_20260612.md  n4_late_retrain_and_arbitration_scout_20260611.md  n4_lexicographic_microfit_update_20260612.md  n4_residual_and_sweep_update_20260612.md  n4_tail_iteration_update_20260612.md  nlink_2.html  nlink_2.json  nlink_5_showcase.html  nlink_5_showcase.json
(+368 files in other folders)
